# nice-view-gifs

./: .gitignore  README.md
boards/shields/nice_view_custom/: CMakeLists.txt
boards/shields/nice_view_custom/widgets/: art.c  status.c  util.c
converter/: pyproject.toml  requirements.txt
converter/converter/: __main__.py  lvgf.py  process.py  rotate.py  template.c
