[tool.poetry]
name = "converter"
version = "0.1.0"
description = ""
authors = ["Daniel <element11sodium@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
imageio = "^2.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
